CRUD de pacientes

--- a/PsicoOnline.UI/Pages/GrauParentesco.razor
+++ b/PsicoOnline.UI/Pages/GrauParentesco.razor
@@ -40,11 +40,7 @@ else
 
 	protected override async Task OnParametersSetAsync()
 	{
-		if (Id == null)
-		{
-
-		}
-		else
+		if (Id != null)
 		{
 			grauParentesco = await GrauParentescoService.GetGrauParentescoByIdAsync((int)Id);
 		}
