--- a/PsicoOnline.UI/Shared/NavMenu.razor
+++ b/PsicoOnline.UI/Shared/NavMenu.razor
@@ -19,6 +19,11 @@
 				<span class="oi oi-people" aria-hidden="true"></span> Graus de Parentesco
 			</NavLink>
 		</div>
+		<div class="nav-item px-3">
+			<NavLink class="nav-link" href="pacientes">
+				<span class="oi oi-people" aria-hidden="true"></span> Pacientes
+			</NavLink>
+		</div>
 	</nav>
 </div>
 
