--- a/PsicoOnline.UI/_Imports.razor
+++ b/PsicoOnline.UI/_Imports.razor
@@ -1,11 +1,12 @@
-﻿@using System.Net.Http
-@using System.Net.Http.Json
-@using Microsoft.AspNetCore.Components.Forms
+﻿@using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+@using MudBlazor
 @using PsicoOnline.UI
-@using PsicoOnline.UI.Shared
 @using PsicoOnline.UI.Services
+@using PsicoOnline.UI.Shared
+@using System.Net.Http
+@using System.Net.Http.Json
