--- a/PsicoOnline.UI/Shared/NavMenu.razor
+++ b/PsicoOnline.UI/Shared/NavMenu.razor
@@ -1,39 +1,11 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-	<div class="container-fluid">
-		<a class="navbar-brand" href="">PsicoOnline.UI</a>
-		<button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-	</div>
-</div>
-
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-	<nav class="flex-column">
-		<div class="nav-item px-3">
-			<NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-				<span class="oi oi-home" aria-hidden="true"></span> Home
-			</NavLink>
-		</div>
-		<div class="nav-item px-3">
-			<NavLink class="nav-link" href="grausparentesco">
-				<span class="oi oi-people" aria-hidden="true"></span> Graus de Parentesco
-			</NavLink>
-		</div>
-		<div class="nav-item px-3">
-			<NavLink class="nav-link" href="pacientes">
-				<span class="oi oi-people" aria-hidden="true"></span> Pacientes
-			</NavLink>
-		</div>
-	</nav>
-</div>
-
-@code {
-	private bool collapseNavMenu = true;
-
-	private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-
-	private void ToggleNavMenu()
-	{
-		collapseNavMenu = !collapseNavMenu;
-	}
-}
+﻿<MudNavMenu>
+	<MudNavLink Href="/" Match="NavLinkMatch.All">
+		<MudIcon Icon="@Icons.Material.Rounded.Home" Title="Home" /> Home
+	</MudNavLink>
+	<MudNavLink Href="/grausparentesco" Match="NavLinkMatch.Prefix">
+		<MudIcon Icon="@Icons.Material.Rounded.People" Title="Graus de Parentesco" /> Graus de Parentesco
+	</MudNavLink>
+	<MudNavLink Href="/pacientes" Match="NavLinkMatch.Prefix">
+		<MudIcon Icon="@Icons.Material.Rounded.Person" Title="Pacientes" /> Pacientes
+	</MudNavLink>
+</MudNavMenu>
