--- a/PsicoOnline.UI/Pages/GrauParentesco.razor
+++ b/PsicoOnline.UI/Pages/GrauParentesco.razor
@@ -15,8 +15,13 @@ else
 <br />
 <EditForm Model="grauParentesco" OnValidSubmit="SubmeterAsync">
 	<DataAnnotationsValidator />
-	<MudTextField Label="Descrição" Variant="Variant.Outlined" Margin="Margin.Dense" Clearable="true" Immediate="true" Counter="100"
-				  @bind-Value="grauParentesco.Descricao" For="@(() => grauParentesco.Descricao)" />
+	<MudCard>
+		<MudCardContent>
+			<MudTextField Label="Descrição" Variant="Variant.Outlined" Margin="Margin.Dense" Clearable="true" Immediate="true" Counter="100"
+						  @bind-Value="grauParentesco.Descricao" For="@(() => grauParentesco.Descricao)" />
+		</MudCardContent>
+	</MudCard>
+	<br />
 	<MudButton Variant="Variant.Outlined" EndIcon="@Icons.Material.Filled.Save" Color="Color.Primary" ButtonType="ButtonType.Submit">@btnText</MudButton>&nbsp;
 	@if (Id != null)
 	{
