--- a/PsicoOnline.UI/Pages/GrauParentesco.razor
+++ b/PsicoOnline.UI/Pages/GrauParentesco.razor
@@ -12,7 +12,7 @@ else
 	<PageTitle>Editar Grau de Parentesco: @grauParentesco.Descricao</PageTitle>
 	<MudText Typo="Typo.h5">Editar Grau de Parentesco: @grauParentesco.Descricao</MudText>
 }
-<br />
+<hr />
 <EditForm Model="grauParentesco" OnValidSubmit="SubmeterAsync">
 	<DataAnnotationsValidator />
 	<MudCard>
@@ -25,6 +25,14 @@ else
 	<MudButton Variant="Variant.Outlined" EndIcon="@Icons.Material.Filled.Save" Color="Color.Primary" ButtonType="ButtonType.Submit">@btnText</MudButton>&nbsp;
 	@if (Id != null)
 	{
-		<MudButton Variant="Variant.Outlined" EndIcon="@Icons.Material.Filled.Delete" Color="Color.Error" @onclick="DeleteGrauParentescoAsync">Excluir</MudButton>
+		<MudButton Variant="Variant.Outlined" EndIcon="@Icons.Material.Filled.Delete" Color="Color.Error" @onclick="ConfirmarExclusaoAsync">Excluir</MudButton>
 	}
+	<MudMessageBox @ref="MessageBox" Title="Atenção" CancelText="Não">
+		<MessageContent>
+			Confirma a exclusão do grau de parentesco @grauParentesco.Descricao?
+		</MessageContent>
+		<YesButton>
+			<MudButton Variant="Variant.Outlined" EndIcon="@Icons.Material.Filled.Delete" Color="Color.Error" @onclick="DeleteGrauParentescoAsync">Sim</MudButton>
+		</YesButton>
+	</MudMessageBox>
 </EditForm>
