--- a/PsicoOnline.UI/Pages/Paciente.razor
+++ b/PsicoOnline.UI/Pages/Paciente.razor
@@ -12,7 +12,7 @@ else
 	<PageTitle>Editar Paciente: @paciente.Nome</PageTitle>
 	<MudText Typo="Typo.h5">Editar Paciente: @paciente.Nome</MudText>
 }
-<br />
+<hr />
 <EditForm Model="paciente" OnValidSubmit="SubmeterAsync">
 	<DataAnnotationsValidator />
 	<MudCard>
@@ -37,6 +37,14 @@ else
 	<MudButton Variant="Variant.Outlined" EndIcon="@Icons.Material.Filled.Save" Color="Color.Primary" ButtonType="ButtonType.Submit">@btnText</MudButton>&nbsp;
 	@if (Id != null)
 	{
-		<MudButton Variant="Variant.Outlined" EndIcon="@Icons.Material.Filled.Delete" Color="Color.Error" @onclick="DeletePacienteAsync">Excluir</MudButton>
+		<MudButton Variant="Variant.Outlined" EndIcon="@Icons.Material.Filled.Delete" Color="Color.Error" @onclick="ConfirmarExclusaoAsync">Excluir</MudButton>
 	}
+	<MudMessageBox @ref="MessageBox" Title="Atenção" CancelText="Não">
+		<MessageContent>
+			Confirma a exclusão do paciente @paciente.Nome?
+		</MessageContent>
+		<YesButton>
+			<MudButton Variant="Variant.Outlined" EndIcon="@Icons.Material.Filled.Delete" Color="Color.Error" @onclick="DeletePacienteAsync">Sim</MudButton>
+		</YesButton>
+	</MudMessageBox>
 </EditForm>
