--- a/PsicoOnline.UI/Shared/MainLayout.razor
+++ b/PsicoOnline.UI/Shared/MainLayout.razor
@@ -1,15 +1,17 @@
 ﻿@inherits LayoutComponentBase
 
-<MudThemeProvider />
+<MudThemeProvider @bind-IsDarkMode="@modoEscuro" />
 <MudDialogProvider />
 <MudSnackbarProvider />
 
 <MudLayout>
 	<MudAppBar Elevation="1">
-		<MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
+		<MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => AlternarGaveta())" />
 		<MudText Typo="Typo.h5" Class="ml-3">PsicoOnline</MudText>
+		<MudSpacer />
+		<MudSwitch @bind-Checked="@modoEscuro" Color="Color.Primary" T="bool" Label="Alternar modo claro/escuro" />
 	</MudAppBar>
-	<MudDrawer @bind-Open="_drawerOpen" ClipMode="DrawerClipMode.Always" Elevation="2">
+	<MudDrawer @bind-Open="gavetaAberta" ClipMode="DrawerClipMode.Always" Elevation="2">
 		<NavMenu />
 	</MudDrawer>
 	<MudMainContent>
@@ -18,12 +20,3 @@
 		</MudContainer>
 	</MudMainContent>
 </MudLayout>
-
-@code {
-	bool _drawerOpen = true;
-
-	void DrawerToggle()
-	{
-		_drawerOpen = !_drawerOpen;
-	}
-}
