--- a/PsicoOnline.UI/_Imports.razor
+++ b/PsicoOnline.UI/_Imports.razor
@@ -6,6 +6,7 @@
 @using Microsoft.JSInterop
 @using MudBlazor
 @using PsicoOnline.UI
+@using PsicoOnline.UI.Components
 @using PsicoOnline.UI.Services
 @using PsicoOnline.UI.Shared
 @using System.Net.Http
