--- a/PsicoOnline.UI/Pages/Paciente.razor
+++ b/PsicoOnline.UI/Pages/Paciente.razor
@@ -4,7 +4,7 @@
 
 @if (Id == null)
 {
-	<PageTitle>Criar Paciente</PageTitle>
+	<PageTitle>Adicionar Paciente</PageTitle>
 	<MudText Typo="Typo.h5">Adicionar Paciente</MudText>
 }
 else
@@ -24,27 +24,14 @@ else
 			<br />
 			<MudTextField Label="Telefone" Variant="Variant.Outlined" Margin="Margin.Dense" Clearable="true" Immediate="true" Counter="11"
 						  @bind-Value="paciente.Telefone" For="@(() => paciente.Telefone)" />
-			<label for="genero">Gênero</label><br />
-			<MudRadioGroup @bind-SelectedOption="paciente.Genero">
-				@foreach (var genero in generos)
-				{
-					<MudRadio Option="genero.Id" Color="Color.Primary" Dense="true" Size="Size.Small">@genero.Descricao</MudRadio>
-				}
-			</MudRadioGroup>
+			<GeneroComponent paciente="@paciente" />
 		</MudCardContent>
 	</MudCard>
 	<br />
 	<MudButton Variant="Variant.Outlined" EndIcon="@Icons.Material.Filled.Save" Color="Color.Primary" ButtonType="ButtonType.Submit">@btnText</MudButton>&nbsp;
 	@if (Id != null)
 	{
-		<MudButton Variant="Variant.Outlined" EndIcon="@Icons.Material.Filled.Delete" Color="Color.Error" @onclick="ConfirmarExclusaoAsync">Excluir</MudButton>
+		var mensagem = $"Confirma a exclusão do paciente {paciente.Nome}?";
+		<ConfirmarExclusaoComponent Mensagem="@mensagem" DeleteAsync="DeletePacienteAsync" />
 	}
-	<MudMessageBox @ref="MessageBox" Title="Atenção" CancelText="Não">
-		<MessageContent>
-			Confirma a exclusão do paciente @paciente.Nome?
-		</MessageContent>
-		<YesButton>
-			<MudButton Variant="Variant.Outlined" EndIcon="@Icons.Material.Filled.Delete" Color="Color.Error" @onclick="DeletePacienteAsync">Sim</MudButton>
-		</YesButton>
-	</MudMessageBox>
 </EditForm>
