Atualização de pacotes Nuget e criação de link para acesso a página de sessões no menu do app

--- a/PsicoOnline.UI/Shared/NavMenu.razor
+++ b/PsicoOnline.UI/Shared/NavMenu.razor
@@ -3,9 +3,12 @@
 		<MudIcon Icon="@Icons.Material.Rounded.Home" Title="Home" /> Home
 	</MudNavLink>
 	<MudNavLink Href="/grausparentesco" Match="NavLinkMatch.Prefix">
-		<MudIcon Icon="@Icons.Material.Rounded.People" Title="Graus de Parentesco" /> Graus de Parentesco
+		<MudIcon Icon="@Icons.Material.Rounded.FamilyRestroom" Title="Graus de Parentesco" /> Graus de Parentesco
 	</MudNavLink>
 	<MudNavLink Href="/pacientes" Match="NavLinkMatch.Prefix">
 		<MudIcon Icon="@Icons.Material.Rounded.Person" Title="Pacientes" /> Pacientes
+	</MudNavLink>
+	<MudNavLink Href="/sessoes" Match="NavLinkMatch.Prefix">
+		<MudIcon Icon="@Icons.Material.Rounded.Assignment" Title="Sessões" /> Sessões
 	</MudNavLink>
 </MudNavMenu>
