Atualiza os projetos para o framework net7.0 Atualiza pacotes nuget Corrige problema na string de conexão com o banco de dados Inclui link para CRUD de Responsável no menu de navegação

--- a/PsicoOnline.UI/Shared/NavMenu.razor
+++ b/PsicoOnline.UI/Shared/NavMenu.razor
@@ -8,6 +8,9 @@
 	<MudNavLink Href="/pacientes" Match="NavLinkMatch.Prefix">
 		<MudIcon Icon="@Icons.Material.Rounded.Person" Title="Pacientes" /> Pacientes
 	</MudNavLink>
+	<MudNavLink Href="/responsaveis" Match="NavLinkMatch.Prefix">
+		<MudIcon Icon="@Icons.Material.Rounded.Person" Title="Responsáveis" /> Responsáveis
+	</MudNavLink>
 	<MudNavLink Href="/sessoes" Match="NavLinkMatch.Prefix">
 		<MudIcon Icon="@Icons.Material.Rounded.Assignment" Title="Sessões" /> Sessões
 	</MudNavLink>
