Código parcial de CRUD para Responsável

--- a/PsicoOnline.UI/Components/GeneroComponent.razor
+++ b/PsicoOnline.UI/Components/GeneroComponent.razor
@@ -1,8 +1,20 @@
 ﻿<label for="genero">Gênero</label>
 <br />
-<MudRadioGroup @bind-SelectedOption="Paciente.Genero">
-	@foreach (var genero in generos)
-	{
-		<MudRadio Option="genero.Id" Color="Color.Primary" Dense="true" Size="Size.Small">@genero.Descricao</MudRadio>
-	}
-</MudRadioGroup>
+@if (Paciente != null)
+{
+	<MudRadioGroup @bind-SelectedOption="Paciente.Genero">
+		@foreach (var genero in generos)
+		{
+			<MudRadio Option="genero.Id" Color="Color.Primary" Dense="true" Size="Size.Small">@genero.Descricao</MudRadio>
+		}
+	</MudRadioGroup>
+}
+else
+{
+	<MudRadioGroup @bind-SelectedOption="Responsavel.Genero">
+		@foreach (var genero in generos)
+		{
+			<MudRadio Option="genero.Id" Color="Color.Primary" Dense="true" Size="Size.Small">@genero.Descricao</MudRadio>
+		}
+	</MudRadioGroup>
+}
