Criação de componente para renderizar os radio buttons de gênero nas páginas necessárias a fim de evitar código redundante

--- a/PsicoOnline.UI/Components/GeneroComponent.razor
+++ b/PsicoOnline.UI/Components/GeneroComponent.razor
@@ -3,18 +3,12 @@
 @if (Paciente != null)
 {
 	<MudRadioGroup @bind-SelectedOption="Paciente.Genero">
-		@foreach (var genero in generos)
-		{
-			<MudRadio Option="genero.Id" Color="Color.Primary" Dense="true" Size="Size.Small">@genero.Descricao</MudRadio>
-		}
+		<GeneroRadioComponent />
 	</MudRadioGroup>
 }
 else
 {
 	<MudRadioGroup @bind-SelectedOption="Responsavel.Genero">
-		@foreach (var genero in generos)
-		{
-			<MudRadio Option="genero.Id" Color="Color.Primary" Dense="true" Size="Size.Small">@genero.Descricao</MudRadio>
-		}
+		<GeneroRadioComponent />
 	</MudRadioGroup>
 }
