--- a/PsicoOnline.UI/Shared/MainLayout.razor
+++ b/PsicoOnline.UI/Shared/MainLayout.razor
@@ -9,8 +9,7 @@
 		<MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => AlternarGaveta())" />
 		<MudText Typo="Typo.h5" Class="ml-3">PsicoOnline</MudText>
 		<MudSpacer />
-		<MudSwitch @bind-Checked="@modoEscuro" T="bool" Color="Color.Primary"
-				   ThumbIcon="@(modoEscuro == true ? Icons.Material.Filled.DarkMode : Icons.Material.Filled.LightMode)" />
+		<MudSwitch T="bool" Color="Color.Primary" CheckedChanged="AlternarModoEscuro" ThumbIcon="@iconeAtual" />
 	</MudAppBar>
 	<MudDrawer @bind-Open="gavetaAberta" ClipMode="DrawerClipMode.Always" Elevation="2">
 		<NavMenu />
