Migração dos projetos para net8.0 Pequenas refatorações de código

--- a/PsicoOnline.UI/Pages/GrausParentesco.razor
+++ b/PsicoOnline.UI/Pages/GrausParentesco.razor
@@ -8,7 +8,7 @@
 {
 	<MudProgressCircular Color="Color.Primary" Indeterminate="true" />
 }
-else if (GrauParentescoService.GrausParentesco.Count == 0)
+else if (!GrauParentescoService.GrausParentesco.Any())
 {
 	<p><em>Nenhum grau de parentesco cadastrado.</em></p>
 }
