Atualiza pacotes Nuget e corrige bugs devido a nova versão do MudBlazor

--- a/PsicoOnline.UI/Components/GeneroComponent.razor
+++ b/PsicoOnline.UI/Components/GeneroComponent.razor
@@ -2,13 +2,13 @@
 <br />
 @if (Paciente != null)
 {
-	<MudRadioGroup @bind-SelectedOption="Paciente.Genero">
-		<GeneroRadioComponent />
-	</MudRadioGroup>
+    <MudRadioGroup @bind-Value="Paciente.Genero">
+        <GeneroRadioComponent />
+    </MudRadioGroup>
 }
 else
 {
-	<MudRadioGroup @bind-SelectedOption="Responsavel.Genero">
-		<GeneroRadioComponent />
-	</MudRadioGroup>
+    <MudRadioGroup @bind-Value="Responsavel.Genero">
+        <GeneroRadioComponent />
+    </MudRadioGroup>
 }
