--- a/PsicoOnline.UI/Components/GeneroRadioComponent.razor
+++ b/PsicoOnline.UI/Components/GeneroRadioComponent.razor
@@ -1,4 +1,4 @@
 ﻿@foreach (var genero in generos)
 {
-	<MudRadio Option="genero.Id" Color="Color.Primary" Dense="true" Size="Size.Small">@genero.Descricao</MudRadio>
+    <MudRadio Value="genero.Id" Color="Color.Primary" Dense="true" Size="Size.Small">@genero.Descricao</MudRadio>
 }
