--- a/PsicoOnline.UI/Shared/MainLayout.razor
+++ b/PsicoOnline.UI/Shared/MainLayout.razor
@@ -1,6 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
 <MudThemeProvider @bind-IsDarkMode="@modoEscuro" />
+<MudPopoverProvider />
 <MudDialogProvider />
 <MudSnackbarProvider />
 
